# Orchestrator

./: AGENTS.md  README.md  TODO.md  agent_description.md  agent_models (1).py  agent_models.py  docker-compose.yml  index_agents.py  main.py  patch.diff  patch2.diff  pyproject.toml
.github/workflows/: ci.yml
scripts/: index_agents.py  sample_agents.json
src/app/: main.py
src/app/api/: endpoints.py
src/app/clients/: agent_discovery.py
src/app/models/: agent.py  api.py  graph.py  llm.py  manifest.py  registry.py  retry.py  state.py  tools.py
src/app/orchestration/: backward_tracing.py  cycle_detection.py  topological_sort.py
src/app/temporal/: activities.py  workflows.py
tests/: test_activities.py  test_agent_discovery.py  test_main.py
tests/api/: test_endpoints.py
tests/app/orchestration/: test_backward_tracing.py  test_cycle_detection.py  test_topological_sort.py
tests/orchestration/: test_cycle_detection.py  test_mapping.py  test_topological_sort.py
tests/temporal/: test_activities.py  test_e2e_orchestrator.py  test_workflows.py
