[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "langgraph>=1.1.3",
    "opensearch-py[async]>=3.1.0",
    "pydantic>=2.12.5",
    "temporalio>=1.24.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
addopts = "-v"
pythonpath = "src"
